# cairo-playground

./: .gitmodules  Dockerfile
frontend/: .prettierrc  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/: MainButton.tsx  Output.tsx  TextEditor.tsx
frontend/src/lib/: api.ts  types.ts
server/: Cargo.toml
server/src/: handler.rs  main.rs
