[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.6"
eyre = "0.6.8"
serde = { version="1.0.152", features = ["derive"]}
serde_json = "1.0.93"
tempfile = "3.3.0"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
